<resources>
    <string name="app_name">MetalTracker</string>
    <string name="txtStock">Stocks</string>
    <string name="txtSell">Sell</string>
    <string name="txtBuy">Buy</string>
    <string name="txtPrice">Price</string>
    <string name="txtPawn">Pawn</string>
    <string name="txtDes">Description</string>
    <string name="txtEmail">Email</string>
    <string name="txtPwTag">Password</string>
    <string name="txtLogIn">Log In</string>
    <string name="txtUsername">User Name</string>
    <string name="txtShopName">Shop Name</string>
    <string name="txtSave">Save</string>
    <string name="txtProfile">Profile</string>
    <string name="txtLogOut">Log Out</string>
    <string name="txtDate">Date</string>
    <string name="txtRegister">Register</string>
    <string name="default_web_client_id">AIzaSyBXMZodRdgk47sECK58gicrUCuvP5u6fTU</string>
</resources>